# veriquery

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  README_zh.md  logging.yaml  pyproject.toml  requirements.txt  start.ps1
agents/: __init__.py  comparison_node.py  erc_node.py  workflow_graph.py  workflow_nodes.py
api/: __init__.py  dependencies.py  error_handlers.py  main.py
api/routers/: __init__.py  chat.py  circuit.py  compare.py  documents.py  erc.py  pinout.py
core/: __init__.py  cleanup_manager.py  config.py  exceptions.py  llm_client.py  memory_manager.py  model_manager.py  schema.py  sqlite_utils.py  svg_renderer.py
extraction/: __init__.py  parameter_extractor.py  table_extractor.py
ingestion/: __init__.py  document_processor.py  image_indexer.py
knowledge/: __init__.py  chip_importer.py  graph_db.py  graph_query.py  pinout_library.py
reasoning/: __init__.py  erc_engine.py  parameter_scorer.py
retrieval/: __init__.py  bm25_store.py  embeddings.py  hybrid_retriever.py  table_store.py  vector_store.py
ui/: __init__.py  api_client.py  app.py  sidebar_nav.py  theme.py
ui/.streamlit/: config.toml
ui/pages/: 1_Documents.py  2_Chat.py  3_Pinout.py  4_ERC.py  5_Compare.py  6_Circuit.py
