[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veriquery"
version = "1.0.0"
description = "Multimodal Agentic RAG with Graph-Enhanced Knowledge Base for Hardware Datasheet Intelligent Q&A and Verification System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "VeriQuery Team"}
]
keywords = [
    "datasheet",
    "rag",
    "electronics",
    "ai",
    "nlp",
    "erc",
    "electrical-rule-check",
    "hybrid-retrieval",
    "rrf",
    "z-number",
    "b-spotis",
    "merec",
    "knowledge-graph",
    "multimodal",
    "pinout",
    "parameter-extraction",
    "circuit-search",
    "langgraph",
    "agentic-rag",
    "hardware-specification",
    "chip-comparison",
    "semiconductor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "langgraph>=0.0.30",
    "torch>=2.1.0",
    "transformers>=4.40.0,<5.0",
    "accelerate>=0.25.0",
    "pillow>=10.2.0",
    "qwen-vl-utils>=0.0.1",
    "sentence-transformers>=2.3.0",
    "chromadb==0.4.24",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.10.0",
    "camelot-py[cv]>=0.10.1",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[project.scripts]
veriquery = "run:main"

[project.urls]
Homepage = "https://github.com/FinalSunFlower/Veriquery"
Documentation = "https://github.com/FinalSunFlower/Veriquery#readme"
Repository = "https://github.com/FinalSunFlower/Veriquery"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ingestion*", "retrieval*", "extraction*", "reasoning*", "agents*", "features*", "api*", "ui*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"